# SimRAG-Reproduction

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  LICENSE  MODEL_USAGE.md  README.md  check_cudnn.py  checkpoint-1.qmd  checkpoint-2.qmd  checkpoint1_instruction.md  clean_personal_info.py  create_cross_platform_zip.py  create_submission_zip.py  docker-compose.yml  project_instruction.md  pyproject.toml  requirements.txt  test_model_colab.ipynb  test_ollama_adapter.py
.github/: repository-description.md  repository_metadata.json
HTML_DOCS/: Containerize your app _ Docker Docs.html  Docker Build _ Docker Docs.html  Google Cloud Platform Tutorial - GeeksforGeeks.html  Leveraging RAG in GenAI _ Docker Docs.html  The Python Standard Library — Python 3.9.23 documentation.html  What is CI_CD_ - GeeksforGeeks.html  What is DevOps _ - GeeksforGeeks.html
ai_providers/: gateway.py
cli/: main.py  utils.py
comparison_results/: comparison_results_2025-11-20_20-42-38.json  comparison_results_2025-11-20_23-42-18.json  comparison_results_2025-11-21_10-53-10.json  comparison_results_2025-11-21_11-43-51.json  comparison_results_2025-11-21_14-02-59.json  comparison_results_2025-11-21_21-49-57.json  comparison_results_2025-11-22_01-07-05.json
experiments/: README.md  (+1 more)
simrag_reproduction/: .gitignore  INSTALLATION.md  PROJECT_SUMMARY.md  README.md  __init__.py  config.py  environment.yml  logging_config.py  pyproject.toml  quick_start.py  report.tex  requirements.txt  run  setup.py
simrag_reproduction/ai_providers/: __init__.py  base_client.py  claude_client.py  gateway.py  huggingface_client.py  local.py  purdue_api.py
simrag_reproduction/cli/: __init__.py  main.py
simrag_reproduction/cli/commands/: __init__.py  config.py  demo.py  experiment.py  export.py  test.py
simrag_reproduction/config/: baseline_config.yaml  simrag_config.yaml
simrag_reproduction/experiments/: README.md  __init__.py  compare_results.py  model_utils.py  run_baseline.py  run_experiment.py  run_simrag.py  test_model.py  test_model_local.py  utils.py
simrag_reproduction/experiments/baseline/: __init__.py  run_baseline.py
simrag_reproduction/experiments/comparison/: compare_results.py
simrag_reproduction/experiments/local_testing/: __init__.py  chromadb_store.py  comparison.py  model_loader.py  rag_query.py  tester.py
simrag_reproduction/experiments/simrag/: __init__.py  run_full_pipeline.py  run_stage1.py  run_stage2.py
simrag_reproduction/logs/: README.md
simrag_reproduction/logs/tuning/: .gitkeep
simrag_reproduction/rag/: demo.py  document_ingester.py  rag_setup.py  retriever.py  vector_store.py
simrag_reproduction/simrag/: __init__.py  base.py  domain_adaptation.py  instruction_following.py  stage1_instruction_tuner.py  synthetic_qa_generation.py
simrag_reproduction/src/: __init__.py
simrag_reproduction/src/baseline/: __init__.py  rag_system.py
simrag_reproduction/src/data/: __init__.py  dataset.py
simrag_reproduction/src/evaluation/: __init__.py  metrics.py
simrag_reproduction/src/simrag/: __init__.py  self_improvement.py  simrag_system.py  synthetic_data_generator.py
simrag_reproduction/src/utils/: __init__.py  logging.py
simrag_reproduction/tests/: test_simrag_simple.py  test_simrag_stage1.py
simrag_reproduction/tests/tests_ai_providers/: test_gateway.py  test_local.py  test_purdue_api.py
simrag_reproduction/tests/tests_integration/: __init__.py  test_demo.py
simrag_reproduction/tests/tests_rag/: test_rag.py
simrag_reproduction/tests/tests_simrag/: __init__.py  test_simrag.py
simrag_reproduction/tests/tests_tuning/: test_basic_tuning.py  test_demo.py
simrag_reproduction/tuned_models/: README.md
simrag_reproduction/tuned_models/llama_1b/v1.1/: README.md
simrag_reproduction/tuning/: __init__.py  adapter_merge.py  basic_tuning.py  demo.py  gguf_convert.py  model_manager.py  model_registry.py  ollama_integration.py  zip_export.py
simrag_reproduction/utils/: export.py
(+70 files in other folders)
