[tool.poetry]
name = "simrag"
version = "0.1.0"
description = "SimRAG paper reproduction - RAG and fine-tuning implementation"
authors = ["SimRAG Reproduction Contributors"]
readme = "README.md"
# Package configuration: simrag_reproduction/ is the package root
packages = [{include = "simrag_reproduction"}]

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Essential ML/AI Libraries
# Note: torch is installed from PyTorch's CUDA index (cu121 for CUDA 12.1+)
torch = {version = ">=2.0.0", source = "pytorch-cu121"}
transformers = ">=4.30.0"
datasets = ">=2.12.0"
accelerate = ">=0.26.0"
# RAG and Retrieval
sentence-transformers = ">=2.2.0"
qdrant-client = ">=1.7.0"
chromadb = ">=0.4.0"
# Data Processing
numpy = ">=1.24.0"
pandas = ">=2.0.0"
# HTTP client for API requests
httpx = ">=0.24.0"
# Quantization and Parameter-Efficient Fine-Tuning
bitsandbytes = ">=0.41.0"
peft = ">=0.7.0"
# CLI and utilities
typer = {extras = ["all"], version = ">=0.9.0"}
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
ruff = "*"
black = "*"
mypy = ">=1.0.0"

[tool.poetry.scripts]
simrag = "simrag_reproduction.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
    "A", "ARG", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
    "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "T", "TID", "UP", "W", "YTT"
]
ignore = [
    "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915"
]

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests"]
norecursedirs = [".git", "__pycache__", ".pytest_cache", "*.egg", "dist", "build", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

