[tool.poetry]
name = "simrag"
version = "0.1.0"
description = "SimRAG paper reproduction - RAG and fine-tuning implementation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
# Package is the current directory (simrag_reproduction/)
# When pyproject.toml is in the package directory, Poetry auto-detects the package
# The package name will be 'simrag_reproduction' (directory name)

[tool.poetry.dependencies]
python = ">=3.9"
# Essential ML/AI Libraries
torch = ">=2.0.0"
transformers = ">=4.30.0"
datasets = ">=2.12.0"
# RAG and Retrieval
sentence-transformers = ">=2.2.0"
qdrant-client = ">=1.7.0"
# Data Processing
numpy = ">=1.24.0"
pandas = ">=2.0.0"
# HTTP client for Ollama
httpx = ">=0.24.0"
# CLI and utilities
typer = {extras = ["all"], version = ">=0.9.0"}
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
ruff = "*"
black = "*"
mypy = ">=1.0.0"

[tool.poetry.scripts]
simrag = "simrag_reproduction.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "A", "ARG", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
    "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "T", "TID", "UP", "W", "YTT"
]
ignore = [
    "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915"
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

